[FIX] web_studio: form_editor, minors UX
- Do not hide column labels on click:
Selecting a column the inner fields will loose opacity: it help understand what is selected (the column) and what’s not (the inner fields).
Since the previous implementation was too much generic, it impacted the column label too that should be clearly visible instead.

- 'Image Field', show available room for image file
The previous design was misleading because of the image size and colours.
This fix show clearly how much size will be available for the image file

--- a/web_studio/static/src/less/form_editor.less
+++ b/web_studio/static/src/less/form_editor.less
@@ -66,7 +66,7 @@
                     outline: 2px solid @odoo-brand-optional;
                     border: 5px solid fade(@odoo-brand-optional, 10%);
 
-                    tr:not(.o_web_studio_hovered) {
+                    tr:not(.o_web_studio_hovered) td > *:not(.o_horizontal_separator) {
                         opacity: 0.5;
                     }
                 }
@@ -75,6 +75,10 @@
         .o_form_field_image img {
             width: 100%;
             height: auto;
+            &[src="/web/static/src/img/placeholder.png"] {
+                padding: 9% 24%;
+                background: @o-web-studio-bg-lighter;
+            }
         }
         .o_web_studio_hovered {
             outline: 1px dashed @odoo-brand-optional;
